tests/pos/test-booldecl.dic
class func_test{
  func int main(){
    bool t = true;
    if (t){
      printstr("ok");
    }
    return 0;
  }
}
