tests/neg/test-class-1.dic
class TestClass {
    func int main() {
        // Not allowed to have code outside of class
        printstr("should throw error");
    }
}

printstr("cant define things outside of class");